Input ID_Read text align bug removed

--- a/styles.css
+++ b/styles.css
@@ -223,7 +223,7 @@ button:hover{
 
 #ID_Read{
     text-align: center;
-    text-align-last: center;
+    border: var(--main-white);
 }
 
                                                                               /* Animations */
